--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -6,6 +6,7 @@
     <view class='fixed-btns-box'>
       <view class='fiexd-cart'>
         <image src="../../images/icon/cart@top.png"></image>
+        <view wx:if="{{CartTotalCounts>0}}">{{CartTotalCounts}}</view>
       </view>
     </view>
 
@@ -26,7 +27,7 @@
         </picker>
       </view>
       <view class='middle-border'></view>
-      <view class="add-cart-btn  {{bannerInfo.stock==0?'disabled':''}} ">
+      <view class="add-cart-btn  {{bannerInfo.stock==0?'disabled':''}} " bindtap="onAddingToCartTap">
         <text>加入购物车</text>
         <image class='cart-icon' src="../../images/icon/cart.png"></image>
       </view>
