--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,60 @@
-<!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+<view class="container cart-container">
+  <block wx:if="{{cartData.length>0}}">
+    <view clas="cart-box">
+      <block wx:for="{{cartData}}">
+        <view class="cart-item">
+          <view class="cart-item-main">
+
+            <view class="cart-item-checkbox">
+              <image wx:if="{{item.selectstatus}}" src="../../images/icon/circle@selected.png"></image>
+              <image wx:else src="../../images/icon/circle@noselected.png"></image>
+            </view>
+
+            <view class="cart-item-img">
+              <image class="good-image" src="{{item.imgUrl}}"></image>
+            </view>
+
+            <view class="cart-item-word">
+              <view class="title-box">
+                <text class="title">{{item.name}}</text>
+                <text>￥{{item.price}}</text>
+              </view>
+
+              <view class='bottom-box'>
+                <view class="cart-item-counts">
+                  <view class="btns">-</view>
+                  <view class="counts">{{item.counts}}</view>
+                  <view class="btns">+</view>
+                </view>
+
+                <view class="delete">x</view>
+              </view>
+            </view>
+          </view>
+        </view>
+      </block>
+    </view>
+
+    <view class="footer-account-box all-accounts-box">
+      <view class="all-select" bindtap="toggleSelectAll" data-status="{{selectedTypeCounts==cartData.length?'true':'false'}}">
+
+
+        <image wx:if="{{selectedTypeCounts==cartData.length}}" class="title-icon" src="../../images/icon/all@selected.png"></image>
+        <image wx:else class="title-icon" src="../../imgs/icon/all.png"></image>
+
+        <text>全选({{selectedCounts}})</text>
+      </view>
+      <view class="all-price-submit {{account==0?'disabled':''}}" bindtap="submitOrder">
+        <view class="accounts-btn">下单</view>
+        <view class="price-text">￥{{account}}</view>
+        <view class="arrow-icon">
+          <image wx:if="{{account==0}}" src="../../images/icon/arrow@grey.png"></image>
+          <image wx:else src="../../images/icon/arrow.png"></image>
+        </view>
+      </view>
+    </view>
+  </block>
+  <view wx:else class="no-data">
+    你没有添加任何商品
+  </view>
+</view>
